--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </header>
   <main>
     <section class="Home">
+      <div class="image_geomtry_1"><img src="img/image_geomtry_1.png" alt="shape1">
+      </div>
       <h1>Sonia Bangar</h1>
       <p class="paragraph">Hello! I am a software developer! I can help you build a product, feature or website. Taka a
         look of my works.don&apos;t
