--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 If you like what you see and have a project you need coded, don't hesitate and contact me.
       </p>
       <button class="bttn">Start collaboration</button>
+      <img class="spacer" src="/images/image_geometry_2.svg" alt="spacer">
     </section>
    </body>
 </html>
