Start project section

--- a/index.html
+++ b/index.html
@@ -28,5 +28,25 @@ If you like what you see and have a project you need coded, don't hesitate and c
       <button class="bttn">Start collaboration</button>
       <img class="spacer" src="/images/image_geometry_2.svg" alt="spacer">
     </section>
+    <section class="projects">
+      <h2 class="pHeader">Projects</h2>
+      <div class="pList">
+        <article class="p">
+          <img src="./images/p1image.png" alt="img1">
+          <h3>Project name goes here</h3>
+          <div class="tags">
+            <p class="tag">HTML/CSS</p>
+            <p class="tag">Ruby on Rails</p>
+            <p class="tag">JavaScript</p>
+          </div>
+          <button type="button" class="see">See this project &rarr;</button>
+        </article>
+        <article class="p"></article>
+        <article class="p"></article>
+        <article class="p"></article>
+        <article class="p"></article>
+        <article class="p"></article>
+      </div>
+    </section>
    </body>
 </html>
