--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 </head>
 
 <body>
-    <div class= "toolbar">
-      <div class= "img_geomtry">
+    <header class= "toolbar">
+      <a class= "img_geomtry">
         <img src= "./images/image_geometry_1.png" alt=""class="shape1">
-      </div>
+      </a>
       <nav class= "navbar">
         <img class= "menu" src= "./images/ic_menu.png" alt="">
       </nav>
-    </div>
-    <section class= "header">
+    </header>
+    <section class= "home">
       <h1 class= "title">Sonia Bangar</h1> 
       <p class= "paragraph">
         Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
 If you like what you see and have a project you need coded, don't hesitate and contact me.
       </p>
       <button class="bttn">Start collaboration</button>
-      <img class="spacer" src="/images/image_geometry_2.svg" alt="spacer">
+      <span class="spacer">
     </section>
    </body>
 </html>
