complete project section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!--header and nav section -->
     <header class= "toolbar">
       <a class= "img_geomtry">
         <img src= "./images/image_geometry_1.png" alt=""class="shape1">
@@ -148,13 +149,13 @@ If you like what you see and have a project you need coded, don't hesitate and c
         <div class="skillblock">
             <h3 class ="language block">skills</h3>
           <ul>
-           <li>• Codekit</li> 
-            <li>• Codepen</li>
-             <li>• GitHub</li> 
-             <li>• GitLAb</li>
-             <li>• Terminal</li>
+           <li> Codekit</li> 
+            <li> Codepen</li>
+             <li> GitHub</li> 
+             <li> GitLAb</li>
+             <li> Terminal</li>
           </ul>
-          <img align="right" src="images/ic_skills.png" alt="img">
+          <img src= "right" src= "images/ic_skills.png" alt="img">
           </div>
 
 
@@ -162,16 +163,15 @@ If you like what you see and have a project you need coded, don't hesitate and c
         <!--contact form start here-->
         
             <a class= "img_geomtry">
-              <img src= "./images/image_geometry_3.png" alt=""class="shape2">
+              <img scr= "./images/image_geometry_3.png" alt=""class="shape1">
             </a>
             <nav class= "navbar1">
         </header>
         <section class="started"><h1 class= "abget">Get started  </h1> 
-          <di>
-          <p class= "Get started">
+        <div>
+          <p class= "paragraph1">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
-            <br><br><button class="bttngt">Get started  </button>
-          </p>
+            </p> <br>
            </div>
            <ul>
             <li>
