Add contact form

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ If you like what you see and have a project you need coded, don't hesitate and c
                 <input class="email" name="email" placeholder="Your Email" required>
             </li>
             <li>
-                <textarea name="message" placeholder="Enter your message here..." cols="25" rows="5" maxlength="500" required></textarea>
+                <textarea class="message" placeholder="Enter your message here..." cols="25" rows="5" maxlength="500" required></textarea>
             </li>
             <li>
                 <button class="submit">Start collaboration</button>
@@ -190,6 +190,7 @@ If you like what you see and have a project you need coded, don't hesitate and c
     </form>
 </section>
 <!-- Contact Form end here -->
+      
 
         </div>
        </section>
