changes in html

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     </div>
     <!--language block-->
     <div>
-      <div class="Langblock">
-        <h3 class="language block">Languages</h3>
+      <div class="langblock block">
+        <h3>Languages</h3>
         <br>
         <ul>
           <li> JavaScript (ES5/ES6) </li>
@@ -136,8 +136,8 @@
         </ul>
       </div>
       <!--frameworkblock-->
-      <div class="frmblock">
-        <h3 class="language block">framework</h3>
+      <div class="frmblock block">
+        <h3>framework</h3>
         <br>
         <ul>
           <li> Bootstrap</li>
@@ -148,8 +148,8 @@
         </ul>
       </div>
       <!--skillblock-->
-      <div class="skillblock">
-        <h3 class="language block">skills</h3>
+      <div class="skillblock block">
+        <h3>skills</h3>
         <ul>
           <li> Codekit</li>
           <li> Codepen</li>
