Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
     </div>
     <!--contact form start here-->
 
-    <a class="img_geomtry">
-      <img scr="./images/image_geometry_3.png" alt="" class="shape1">
-    </a>
+    <div class="img3">
+     
+    </div>
     <nav class="navbar1">
       </header>
       <section class="started">
